.metadata/.plugins/org.eclipse.cdt.ui/Komodo.build.log
12:33:51 **** Incremental Build of configuration Debug for project Komodo ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Samsung/wpilib/cpp/current/include" "-IC:\\Robotics\\Komodo\\Komodo\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "cv\\Socket.o" "..\\cv\\Socket.cpp" 
..\cv\Socket.cpp: In member function 'int Socket::recv(std::string&) const':
..\cv\Socket.cpp:135:7: error: 'cout' is not a member of 'std'
       std::cout << "status == -1   errno == " << errno << "  in Socket::recv\n";
       ^

12:33:52 Build Finished (took 570ms)

